crates/milli/src/search/new/tests/snapshots/milli__search__new__tests__attribute_position__attribute_position_repeated.snap
---
source: crates/milli/src/search/new/tests/attribute_position.rs
expression: "format!(\"{document_ids_scores:#?}\")"
---
[
    (
        5,
        [
            Fid(
                Rank {
                    rank: 6,
                    max_rank: 6,
                },
            ),
            Position(
                Rank {
                    rank: 51,
                    max_rank: 51,
                },
            ),
        ],
    ),
    (
        7,
        [
            Fid(
                Rank {
                    rank: 6,
                    max_rank: 6,
                },
            ),
            Position(
                Rank {
                    rank: 51,
                    max_rank: 51,
                },
            ),
        ],
    ),
    (
        8,
        [
            Fid(
                Rank {
                    rank: 6,
                    max_rank: 6,
                },
            ),
            Position(
                Rank {
                    rank: 51,
                    max_rank: 51,
                },
            ),
        ],
    ),
    (
        9,
        [
            Fid(
                Rank {
                    rank: 6,
                    max_rank: 6,
                },
            ),
            Position(
                Rank {
                    rank: 51,
                    max_rank: 51,
                },
            ),
        ],
    ),
    (
        6,
        [
            Fid(
                Rank {
                    rank: 6,
                    max_rank: 6,
                },
            ),
            Position(
                Rank {
                    rank: 50,
                    max_rank: 51,
                },
            ),
        ],
    ),
]
